---
source: extensions/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"bar/moon.yml\")).unwrap()"
---
language: javascript
layer: application
tasks:
  build:
    command: webpack
    args:
    - '--outputPath'
    - $workspaceRoot/dist/bar
  echo:
    command: echo 'hello world'
  test:
    command: jest
    args:
    - '--concurrency'
    - '5'
    - '--passWithNoTests'
toolchain:
  default: node
